--- a/app/src/main/res/layout/row_recommend_subscribe_simple.xml
+++ b/app/src/main/res/layout/row_recommend_subscribe_simple.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="#추천채널"
+        android:text="#BEST"
         android:textColor="#333333"
         android:textSize="10dp"
         android:textStyle="bold" />
