--- a/app/src/main/res/layout/row_video_contents_comment.xml
+++ b/app/src/main/res/layout/row_video_contents_comment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -18,17 +19,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-        <TextView
-            android:id="@+id/video_contents_comment_tv_user_name"
-            android:layout_width="0dp"
-            android:layout_height="19dp"
-            android:layout_weight="1"
-            android:layout_marginTop="12.28dp"
-            android:layout_marginLeft="15.4dp"
-            android:textColor="#000000"
-            android:textSize="14dp"
-            android:textStyle="bold"
-            android:text="Name surname"/>
+
+            <TextView
+                android:id="@+id/video_contents_comment_tv_user_name"
+                android:layout_width="0dp"
+                android:layout_height="19dp"
+                android:layout_marginLeft="15.4dp"
+                android:layout_marginTop="12.28dp"
+                android:layout_weight="1"
+                android:textColor="#000000"
+                android:textSize="14dp"
+                android:textStyle="bold"
+                tools:text="Name surname" />
         <TextView
             android:id="@+id/video_contents_tv_delete"
             android:layout_width="wrap_content"
@@ -42,29 +44,30 @@
             android:id="@+id/video_contents__comment_tv_user_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="8.99dp"
-            android:paddingRight="1.52dp"
-            android:layout_marginTop="14.44dp"
+            android:layout_marginBottom="14.44dp"
             android:layout_marginLeft="13.48dp"
             android:layout_marginRight="15.4dp"
-            android:layout_marginBottom="14.44dp"
+            android:layout_marginTop="14.44dp"
             android:background="#F7F7F7"
+            android:paddingRight="1.52dp"
+            android:paddingTop="8.99dp"
             android:textColor="#333333"
             android:textSize="14dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipisicing slit, sed do" />
+            tools:text="Lorem ipsum dolor sit amet, consectetur adipisicing slit, sed do" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/video_contents_comment_tv_comment_date"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="14dp"
-                android:layout_marginTop="6.74dp"
                 android:layout_marginLeft="15.4dp"
-                android:text="04/21/2018"
+                android:layout_marginTop="6.74dp"
+                android:layout_weight="1"
+                android:textColor="#B1B1B1"
                 android:textSize="10dp"
-                android:textColor="#B1B1B1"/>
+                tools:text="04/21/2018" />
 
             <Button
                 android:id="@+id/video_contents__comment_bt_comment_comment"
