--- a/app/src/main/res/layout/activity_group_detail.xml
+++ b/app/src/main/res/layout/activity_group_detail.xml
@@ -100,7 +100,10 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/group_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="#FFFFFF"
+            android:clipToPadding="false"
+            android:paddingTop="8dp" />
     </LinearLayout>
 
 
