--- a/app/src/main/res/layout/fragment_image_comments.xml
+++ b/app/src/main/res/layout/fragment_image_comments.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/image_comment_layout_main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -31,10 +32,10 @@
                 android:layout_marginTop="12.28dp"
                 android:layout_weight="1"
                 android:ellipsize="end"
-                android:text="Name surname"
                 android:textColor="#000000"
                 android:textSize="14dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="Name surname" />
 
             <TextView
                 android:id="@+id/image_comment_delete"
@@ -58,9 +59,9 @@
             android:background="#F7F7F7"
             android:padding="5dp"
             android:paddingRight="1.52dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipisicing slit, sed do"
             android:textColor="#000000"
-            android:textSize="14dp" />
+            android:textSize="14dp"
+            tools:text="Lorem ipsum dolor sit amet, consectetur adipisicing slit, sed do" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -73,9 +74,9 @@
                 android:layout_marginLeft="15.4dp"
                 android:layout_marginTop="6.74dp"
                 android:layout_weight="1"
-                android:text="04/21/2018"
                 android:textColor="#B1B1B1"
-                android:textSize="10dp" />
+                android:textSize="10dp"
+                tools:text="04/21/2018" />
 
             <!--<Button-->
                 <!--android:id="@+id/image_contents_btn_recomment"-->
