--- a/app/src/main/res/layout/row_contents_search_simple.xml
+++ b/app/src/main/res/layout/row_contents_search_simple.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/contents_layout_main"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
+    android:background="#FFFFFF"
     android:orientation="horizontal">
 
     <FrameLayout
@@ -17,7 +19,7 @@
             android:id="@+id/contents_image_thumbnail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/google_logo" />
+            app:srcCompat="@drawable/default_logo" />
 
         <ImageView
             android:id="@+id/contents_image_type"
@@ -55,10 +57,10 @@
             android:layout_marginLeft="13dp"
             android:layout_marginRight="13dp"
             android:layout_marginTop="3dp"
-            android:text="BTS - Anpanman fancam focus on Jungkuk"
             android:textColor="#000000"
             android:textSize="13dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="BTS - Anpanman fancam focus on Jungkuk" />
 
         <TextView
             android:id="@+id/contents_text_hash"
@@ -66,9 +68,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="13dp"
             android:layout_marginRight="13dp"
-            android:text="#BTS #bangtan #friends"
             android:textColor="#B1B1B1"
-            android:textSize="12dp" />
+            android:textSize="12dp"
+            tools:text="#BTS #bangtan #friends" />
     </LinearLayout>
 
 </LinearLayout>
