--- a/app/src/main/res/layout/row_search_hash.xml
+++ b/app/src/main/res/layout/row_search_hash.xml
@@ -12,7 +12,7 @@
         android:layout_height="38dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="8dp"
-        app:srcCompat="@drawable/bottom_bar_home_active_icon" />
+        app:srcCompat="@drawable/default_logo" />
 
     <TextView
         android:id="@+id/search_text_word"
